Resolvendo exercicio 6